# rag_local

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
chroma_langchain_db/: chroma.sqlite3
data/: Arjun, the nature lover.docx  The Clockmaker’s Apprentice.docx
rag_application/: manage.py
rag_application/rag_application/: asgi.py  settings.py  urls.py  wsgi.py
rag_application/static/: script.js  styles.css
rag_application/templates/: index.html
